# icescanner

./: .gitignore  .gitlab-ci.yml  Pipfile  README.md  icescanner.py  run.py  setup.cfg
config/: main.yaml
icescanner/: cli.py  entrypoint.py  exceptions.py  file_handler.py  logger.py  thread.py
icescanner/algo/: README.md  input_filter.py
icescanner/config/: main.yaml
icescanner/devices/: camera.py  common_device.py  lidar.py
icescanner/examples/: # example with configuration.py
icescanner/lib/: entrypoint.py  file_handler.py
icescanner/lib/devices/: camera.py  common_device.py  lidar.py
lib/: entrypoint.py  file_handler.py  utils.py  wrappers.py
lib/algo/: input_filter.py
lib/devices/: camera.py  lidar.py
