[metadata]
name = icescanner
version = attr: icescanner.version.__version__
author = None
author_email = None
url = None
description = Ice Scanner
long_description = file: README.md
long_description_content_type = text/markdown
keywords = None
license = Proprietary

[options]
packages = find:
install_requires =
    opencv-python-headless == 4.6.0.66
    pyyaml == 6.0
    colorlog == 6.6.0
    openpylivox-pkg @ git+https://github.com/approximatenumber/OpenPyLivox.git@icebreaker
    pandas == 1.3.5
    matplotlib == 3.5.3
    seaborn == 0.12.0
    click == 8.1.3
    Pillow == 9.2.0

[options.package_data]
* = 
    config/main.yaml

[options.entry_points]
console_scripts = 
    icescanner = icescanner.cli:cli
